--- a/client/src/app/shared/spreadsheet/components/field-cell/date/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/date/cell.component.html
@@ -1,7 +1,10 @@
+@let presentation = field.params.presentation?.format;
+@let dateFormat = presentation?.dateFormat;
+@let showTime = presentation?.showTime;
+
 @if (data !== undefined && data !== null) {
   <div class="field-cell__text-content">
-    @let presentation = field.params.presentation?.format;
-    {{ data | dateFormat: presentation?.dateFormat : presentation?.showTime }}
+    {{ data | dateFormat: dateFormat : showTime }}
   </div>
 }
 @if (selecting) {
@@ -15,9 +18,10 @@
   >
     <p-datepicker
       [inline]="true"
-      [ngModel]="data"
+      [ngModel]="updatedDate"
       (ngModelChange)="onDatePicked($event)"
-      [showTime]="true"
+      [dateFormat]="dateFormat"
+      [showTime]="showTime"
       [showClear]="true"
     />
   </p-overlay>
