--- a/client/src/app/features/auth/login/login.component.html
+++ b/client/src/app/features/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="flex min-h-screen items-center justify-center bg-gray-50">
   <p-card class="w-full max-w-md shadow-lg">
-    <ng-template pTemplate="header">
+    <ng-template #header>
       <div class="flex flex-col items-center pt-6 pb-2 gap-2">
         <img src="assets/images/logo.png" alt="Logo" class="h-20" />
         <p class="font-medium text-lg">Polar<b>Base</b></p>
