refactor: Consolidate number and date formatting logic into dedicated functions for improved reusability and clarity

--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -1164,7 +1164,12 @@
           @if (tableService.isStreaming) {
             <span class="white-space-nowrap overflow-hidden truncate">Calculating...</span>
           } @else {
-            {{ calcResults | parseCalculatedResult: column.calculateType }}
+            {{
+              calcResults
+                | parseCalculatedResult
+                  : column.calculateType
+                  : column.field.params.presentation?.format
+            }}
           }
         </b>
       } @else {
@@ -1180,7 +1185,12 @@
         @if (tableService.isStreaming) {
           <span class="white-space-nowrap overflow-hidden truncate">Calculating...</span>
         } @else {
-          {{ calcResults | parseCalculatedResult: column.calculateType }}
+          {{
+            calcResults
+              | parseCalculatedResult
+                : column.calculateType
+                : column.field.params.presentation?.format
+          }}
         }
       </b>
     </div>
