refactor: Add descriptive text to column editor for improved user guidance on number and currency formatting

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -441,6 +441,9 @@
                       </div>
                     </ng-template>
                   </p-select>
+                  <p class="text-surface-500 text-xs">
+                    The number format to display the column values.
+                  </p>
                 </div>
                 @if (columnFormData.presentation.format.numberFormat === NumberFormat.Currency) {
                   <div class="flex flex-col gap-1">
@@ -461,6 +464,9 @@
                         </div>
                       </ng-template>
                     </p-select>
+                    <p class="text-surface-500 text-xs">
+                      The currency symbol to display for the column values.
+                    </p>
                   </div>
                 }
               }
@@ -507,6 +513,9 @@
                       </div>
                     </ng-template>
                   </p-select>
+                  <p class="text-surface-500 text-xs">
+                    The selected column will be shown as the display value for this reference.
+                  </p>
                 </div>
               }
             }
