refactor: Enhance BaseComponent and TableService to improve table selection and local storage management

--- a/client/src/app/features/base/base.component.html
+++ b/client/src/app/features/base/base.component.html
@@ -6,6 +6,7 @@
     <p-tabs
       lazy
       [value]="tblService.activeTable()?.name"
+      (valueChange)="onTabChange($any($event))"
       class="w-full"
       [class.h-full]="!!tblService.selectedTables().length"
     >
