refactor: Update confirm dialog styling across multiple components for improved consistency and usability

--- a/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
+++ b/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
@@ -1,5 +1,5 @@
 <p-toast appendTo="body" />
-<p-confirmdialog styleClass="max-w-100" appendTo="body" />
+<p-confirmdialog appendTo="body" styleClass="max-w-md" />
 
 <p-drawer
   [(visible)]="isCreationMode"
@@ -136,7 +136,7 @@
   </ng-template>
 </p-drawer>
 
-<div class="py-10 max-w-280 mx-auto">
+<div class="p-10 max-w-6xl mx-auto">
   <div class="flex justify-between items-center mb-8">
     <div>
       <div class="text-xl">API Key Management</div>
