--- a/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
@@ -183,7 +183,7 @@
   </div>
 </ng-template>
 
-<p-confirmdialog appendTo="body" styleClass="max-w-100" />
+<p-confirmdialog appendTo="body" styleClass="max-w-md" />
 
 <p-drawer
   [visible]="visible()"
