--- a/client/src/app/features/base/table/components/table-editor/table-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/table-editor/table-editor-drawer.component.html
@@ -1,4 +1,4 @@
-<p-confirmdialog appendTo="body" styleClass="max-w-100" />
+<p-confirmdialog appendTo="body" styleClass="max-w-md" />
 
 <p-drawer
   [visible]="visible()"
