--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -1,6 +1,6 @@
 <p-toast appendTo="body" />
 
-<p-confirmdialog styleClass="max-w-100" appendTo="body">
+<p-confirmdialog appendTo="body" styleClass="max-w-md">
   <ng-template #message let-message>
     <div class="flex flex-col gap-4">
       <div>{{ message.message }}</div>
