--- a/client/src/app/features/base/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/table/pages/table-list/table-list.component.html
@@ -1,8 +1,8 @@
 <p-toast appendTo="body" />
 
-<p-confirmdialog appendTo="body" styleClass="max-w-100">
+<p-confirmdialog appendTo="body" styleClass="w-md max-w-lg">
   <ng-template #message let-message>
-    <div class="flex flex-col gap-4">
+    <div class="flex flex-1 flex-col gap-4">
       <div>{{ message.message }}</div>
       <div class="flex items-center gap-2">
         <p-checkbox
