refactor: Improve table selection logic and local storage handling in TableListComponent and TableService

--- a/client/src/app/features/base/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/table/pages/table-list/table-list.component.html
@@ -88,7 +88,7 @@
 } @else {
   <ul class="list-none p-0 m-0 overflow-y-auto max-h-full">
     @for (table of filteredTables(); track table.name) {
-      <li (click)="selectTable(table)">
+      <li (click)="selectTable(table.name)">
         <a
           pRipple
           class="group flex items-center cursor-pointer px-4 py-2 text-surface-700 hover:bg-gray-100 duration-150 transition-colors p-ripple"
