refactor: Integrate ViewLayoutService for improved display mode management and local storage handling in TableDetailComponent and related views

--- a/client/src/app/features/base/table/pages/table-detail/views/calendar-view/calendar-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/calendar-view/calendar-view.component.html
@@ -34,7 +34,7 @@
     <p-button
       label="Apply changes"
       [disabled]="!selectedStartField || !selectedEndField"
-      (click)="onChangeDateRange(); popover.hide()"
+      (click)="loadTable(); popover.hide()"
     />
   </div>
 </p-popover>
@@ -85,6 +85,8 @@
           <p-skeleton width="90px" height="33px" />
         } @else {
           <filter-option
+            #filterOption
+            [(query)]="filterQuery"
             [fields]="fields()"
             [items]="records()"
             (onFilter)="onRecordsFiltered($event)"
