--- a/client/src/app/shared/open-map/open-map.component.html
+++ b/client/src/app/shared/open-map/open-map.component.html
@@ -15,6 +15,7 @@
           [outlined]="true"
           (click)="getCurrentLocation()"
           pTooltip="Current location"
+          tooltipPosition="top"
         />
         <p-inputgroup class="w-3xs max-w-3xs">
           <p-iconfield>
