--- a/client/src/app/shared/field-system/filter/filter-group/filter-group.component.html
+++ b/client/src/app/shared/field-system/filter/filter-group/filter-group.component.html
@@ -232,9 +232,7 @@
           class="block"
         />
       }
-    }
-
-    @if (group().children.length === 0) {
+    } @empty {
       <div
         class="text-center py-2 text-gray-400 border-2 border-dashed border-gray-100 rounded-lg text-sm"
       >
