refactor: Enhance DataViewComponent and related services to improve configuration management and column layout handling

--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -687,7 +687,7 @@
                         tableService.layout.cell.selection.anchor.rowIndex === rowIndex &&
                         tableService.layout.cell.selection.anchor.columnIndex === columnIndex
                       "
-                      (viewDetail)="tableService.viewReferenceDetail($event)"
+                      (viewDetail)="tableCellService.viewReferenceDetail($event)"
                     ></ng-template>
                   </div>
                 }
@@ -915,7 +915,7 @@
                         tableService.layout.cell.selection.anchor.rowIndex === rowIndex &&
                         tableService.layout.cell.selection.anchor.columnIndex === columnIndex
                       "
-                      (viewDetail)="tableService.viewReferenceDetail($event)"
+                      (viewDetail)="tableCellService.viewReferenceDetail($event)"
                     ></ng-template>
                   </div>
                 }
