refactor: Implement filtering capabilities in DataViewComponent and enhance table service for improved data management

--- a/client/src/app/shared/spreadsheet/components/view-options/data-filter-options/data-filter-options.component.html
+++ b/client/src/app/shared/spreadsheet/components/view-options/data-filter-options/data-filter-options.component.html
@@ -1,5 +1,6 @@
 <filter-option
-  [query]="query()"
+  #filterOption
+  [(query)]="query"
   [fields]="fields()"
   [items]="rows()"
   itemValue="data"
