refactor: Enhance TableDetailComponent and related views to utilize input table data and improve view configuration management

--- a/client/src/app/features/base/base.component.html
+++ b/client/src/app/features/base/base.component.html
@@ -39,7 +39,7 @@
         @for (table of tblService.selectedTables(); track table.name) {
           <p-tabpanel [value]="table.name">
             <ng-template #content>
-              <table-detail />
+              <table-detail [table]="table" />
             </ng-template>
           </p-tabpanel>
         }
