--- a/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
@@ -44,6 +44,7 @@
   @case ('data-view') {
     <data-view
       #view
+      [table]="table()"
       [displayModeTmpl]="displayModeTmpl"
       (onUpdateColumn)="onUpdateColumn($event)"
       (onUpdateRecord)="onUpdateRecord($event)"
@@ -52,6 +53,7 @@
   @case ('calendar-view') {
     <calendar-view
       #view
+      [table]="table()"
       [displayModeTmpl]="displayModeTmpl"
       (onUpdateColumn)="onUpdateColumn($event)"
       (onUpdateRecord)="onUpdateRecord($event)"
@@ -60,6 +62,7 @@
   @case ('map-view') {
     <map-view
       #view
+      [table]="table()"
       [displayModeTmpl]="displayModeTmpl"
       (onUpdateColumn)="onUpdateColumn($event)"
       (onUpdateRecord)="onUpdateRecord($event)"
