--- a/client/src/app/shared/spreadsheet/components/search-box/search-box.component.html
+++ b/client/src/app/shared/spreadsheet/components/search-box/search-box.component.html
@@ -39,7 +39,7 @@
 </p-popover>
 
 <p-button
-  icon="icon icon-search"
+  icon="icon icon-text-search"
   label="Search"
   [text]="true"
   severity="secondary"
